[gd_scene load_steps=8 format=3 uid="uid://dtox61xw2rp3e"]

[ext_resource type="Script" uid="uid://dw0dsq7ws1lha" path="res://src/Menus/InventarioRecursos/ResourcesHud.gd" id="1_ix1yk"]
[ext_resource type="Texture2D" uid="uid://c2y3e4plqmh21" path="res://src/AssetPacks/Tiny Swords/Tiny Swords (Update 010)/Resources/Resources/W_Idle.png" id="1_mkcvl"]
[ext_resource type="Texture2D" uid="uid://7coqstm4olxf" path="res://src/AssetPacks/Tiny Swords/Tiny Swords (Update 010)/UI/Banners/Carved_3Slides.png" id="1_wdeym"]
[ext_resource type="Texture2D" uid="uid://blfnw3ge2tpxp" path="res://src/AssetPacks/Tiny Swords/Tiny Swords (Update 010)/Resources/Resources/G_Idle.png" id="3_ix1yk"]
[ext_resource type="Texture2D" uid="uid://diptjqat7a84h" path="res://src/AssetPacks/Tiny Swords/Tiny Swords (Update 010)/Deco/18.png" id="4_8aly1"]
[ext_resource type="Texture2D" uid="uid://bso5x606mwmd2" path="res://src/AssetPacks/Tiny Swords/Tiny Swords (Update 010)/Deco/05.png" id="4_ot7fl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aaxvf"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="ResourcesHUD" type="CanvasLayer"]
script = ExtResource("1_ix1yk")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(264, 64)
offset_right = 273.0
offset_bottom = 101.0
theme_override_styles/panel = SubResource("StyleBoxFlat_aaxvf")

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_top = -1.0
offset_right = 282.0
offset_bottom = 104.0
texture = ExtResource("1_wdeym")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 7.0
offset_right = 275.0
offset_bottom = 98.0

[node name="WoodContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/WoodContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/WoodContainer/TextureRect"]
layout_mode = 0
offset_left = -19.0
offset_top = -47.0
offset_right = 109.0
offset_bottom = 81.0
scale = Vector2(0.8232258, 1.0240964)
texture = ExtResource("1_mkcvl")

[node name="WoodLabel" type="Label" parent="HBoxContainer/WoodContainer"]
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="StoneContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/StoneContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/StoneContainer/TextureRect"]
layout_mode = 0
offset_left = -5.0
offset_top = 4.0
offset_right = 59.0
offset_bottom = 68.0
scale = Vector2(1.1363636, 1.2222222)
texture = ExtResource("4_ot7fl")

[node name="StoneLabel" type="Label" parent="HBoxContainer/StoneContainer"]
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="GoldContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/GoldContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/GoldContainer/TextureRect"]
layout_mode = 0
offset_left = -16.000002
offset_top = -14.0
offset_right = 112.0
offset_bottom = 114.0
scale = Vector2(0.69601405, 0.6856467)
texture = ExtResource("3_ix1yk")

[node name="GoldLabel" type="Label" parent="HBoxContainer/GoldContainer"]
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="VillagerContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VillagerContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VillagerContainer/TextureRect"]
layout_mode = 0
offset_left = -3.0
offset_top = -2.0
offset_right = 189.0
offset_bottom = 190.0
scale = Vector2(0.35345882, 0.36037308)
texture = ExtResource("4_8aly1")

[node name="VillagerLabel" type="Label" parent="HBoxContainer/VillagerContainer"]
layout_mode = 2
text = "0"
horizontal_alignment = 1
